<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Action Bar Strings -->

    <string name="app_name">Manager</string>
    <string name="action_new">Add Server</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- END -->


    <!-- Add Server Strings -->

    <string name="empty">There are no servers added yet. Add one by clicking the "+" symbol at the top bar.</string>
    <string name="addserver_title">Server Setup</string>
    <string name="addserver_desc">You can add a server just by filling the information below:</string>
    <string name="addserver_protocol">Protocol:</string>
    <string name="addserver_name">Server Name:</string>
    <string name="addserver_address">Server Address:</string>
    <string name="addserver_username">Username:</string>
    <string name="addserver_password">Password:</string>
    <string name="addserver_button">CONFIRM</string>
    <string name="addserver_button_hint">Add this server</string>
    <string name="backserver_button">CANCEL</string>
    <string name="backserver_button_hint">Go back to previous page</string>

    
    <string name="server_exists">There is already one server with this name!</string>
    <!-- END -->


    <!-- Server Details Strings -->

    <string name="serverdetails_title">Server Details</string>
    <string name="serverdetails_servername">Server Name</string>
    <string name="serverdetails_serverdescription">Server Description</string>
    <string name="serverdetails_options">Options</string>
    <string name="serverdetails_options_edit">Edit</string>
    <string name="serverdetails_options_delete">Delete</string>
    <string name="serverdetails_options_cyclereset">Reset</string>
    <string name="serverdetails_options_hardreset">Hard Reset</string>
    <string name="serverdetails_status">Status:</string>
    <string name="serverdetails_power">Power</string>
    <string name="serverdetails_temperature">Temperature</string>
    <string name="serverdetails_temperatureIcon">Temperature Icon</string>
    <string name="serverdetails_fans">Fans</string>
    <string name="serverdetails_powersupply">Power Supply</string>
    <string name="deletedialog_text">Are you sure you want to delete this server?</string>
    <string name="actiondialog_text">Are you sure you want to proceed with this operation?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- END -->
    <!-- Toast Messages -->
    <string name="connection_nosuccess">The connection was not successful</string>
    <string name="server_powered_off">The server is powered off</string>
    <string name="empty_field">is required.</string>
    <string name="required_string">Required fields:</string>
    <!-- END -->


    <!-- Title Action Bar -->
    <string name="action_titleServerList">Server List</string>
    <string name="action_titleServerDetails">Server Details</string>
    <string name="action_titleAddServer">Server Setup</string>
    <string name="title_AppTitle">BMC Manager</string>
    <!-- END -->
    <string name="title_activity_add_serv">Server Setup</string>
    <string name="hello_world">Hello world!</string>
    <string name="all_fields_required">*All fields are mandatory.</string>

    <string-array name="connection_array">
        <item>HTTP</item>
        <item>HTTPS</item>
    </string-array>

    <string name="credentials">Credentials:</string>
    <string name="empty_block">Couldn\'t load information</string>
    <string name="empty_value"></string>
    <string name="server_status">Status: </string>
    <string name="server_on_status">On</string>
    <string name="server_off_status">Off</string>
    <string name="server_unreachable_status">Unreachable</string>

    
    <string name="power_cycle">Reset</string>
    <string name="hard_reset">Hard Reset</string>
    <string name="delete">Delete</string>
    <string name="add_server">Add Server</string>
    
    <string name="status_critical">Critical</string>
    <string name="status_normal">Normal</string>
    <string name="status_warning">Warning</string>
</resources>