<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppBaseTheme" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/background_grey"
    android:id="@+id/relativeHeader"
    android:elevation="10dp">

        <Button
            android:id="@+id/Options_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:drawableTop="@drawable/ic_action_overflow"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/serverdetails_options"
            android:textColor="@color/white"
            android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/forward_Image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textServerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:text="Server Name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textServerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:text="IP Address"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
    

    <RelativeLayout
        android:id="@+id/bellowHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeHeader"
        android:background="@drawable/header"
        android:elevation="10dp" >

        <TextView
            android:id="@+id/serverStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/server_status"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/switchStatus"
            android:layout_alignBottom="@+id/switchStatus"
            android:layout_toLeftOf="@+id/switchStatus"
            android:text="@string/serverdetails_power"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/switchStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bellowHeader" >

        <ScrollView
            android:id="@+id/scrollViewBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bellowHeader" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.v7.widget.CardView
                	xmlns:card_view="http://schemas.android.com/apk/res-auto"
                	android:id="@+id/card_view1"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
               		card_view:cardElevation="4dp"
                	card_view:cardUseCompatPadding="true"
                	card_view:contentPadding="0dp"
                	card_view:elevation="7dp" >

                    <LinearLayout
                        android:id="@+id/temperatureBlock"
                        style="@style/InformartionBlock" >

                        <TextView
                            android:id="@+id/textTemperatureHeader"
                            style="@style/InformartionBlockHeader"
                            android:text="@string/serverdetails_temperature" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                	xmlns:card_view="http://schemas.android.com/apk/res-auto"
                	android:id="@+id/card_view2"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
               		card_view:cardElevation="4dp"
                	card_view:cardUseCompatPadding="true"
                	card_view:contentPadding="0dp"
                	card_view:elevation="7dp" >

                    <LinearLayout
                        android:id="@+id/coolerBlock"
                        style="@style/InformartionBlock" >

                        <TextView
                            android:id="@+id/textCoolerHeader"
                            style="@style/InformartionBlockHeader"
                            android:text="@string/serverdetails_fans" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                	xmlns:card_view="http://schemas.android.com/apk/res-auto"
                	android:id="@+id/card_view3"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
               		card_view:cardElevation="4dp"
                	card_view:cardUseCompatPadding="true"
                	card_view:contentPadding="0dp"
                	card_view:elevation="7dp" >

                    <LinearLayout
                        android:id="@+id/powerBlock"
                        style="@style/InformartionBlock" >

                        <TextView
                            android:id="@+id/textPowerHeader"
                            style="@style/InformartionBlockHeader"
                            android:text="@string/serverdetails_powersupply" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
